# spinachlang

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  __main__.py  frontend.py  grammar.lark  pyproject.toml  requirements.txt  shell.nix  spinach_example.py  spinach_example.qasm
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
app/: ast_builder.py  exit_code.py  main.py  spinach.py  spinach_types.py  types.py
app/backend/: spinach_back.py
app/frontend/: frontend.py  grammar.lark  spinach_front.py
spinachlang/: __init__.py  __main__.py  ast_builder.py  backend.py  grammar.lark  lsp.py  lsp_main.py  main.py  parser.py  spinach.py  spinach_types.py
spinachlang-demo/: requirements.txt  shell.nix  smoke_test.py  spinachlang_ibm_demo.html  spinachlang_ibm_demo.ipynb
syntaxes/: spinachlang.tmLanguage.json
test/: spinach_example.sph
tests/: spinach_example.qasm  spinach_example.sph  test_ast_builder.py  test_compiler.py  test_critical_features.py  test_extended_gates.py  test_high_features.py  test_library_api.py  test_lsp.py  test_qubit_ref.py  test_smoke_backends.py  test_spinach_front.py
