[project]
name = "spinachlang"
version = "0.4.0"
description = "A quantum programming language and compiler."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cedrick Gauthier", email = "spinachlang@proton.me" }]

dependencies = [
  "lark==1.2.2",
  "pytket==2.15.0",
  "pydantic==2.11.7",
  "pytket-cirq==0.40.0",
  "pytket-qiskit==0.77.0",
  "pytket-pennylane==0.20.0",
  "pytket-braket==0.43.0",
  "pytket-qir==0.24.1",
]

[project.optional-dependencies]
# Quil (Rigetti) output — requires Python <=3.12.
# pytket-pyquil's transitive deps quil==0.17.0 and qcs-sdk-python==0.20.1 are
# Rust extensions compiled against pyo3==0.20.x whose maximum supported Python
# is 3.12; they ship no cp313 wheels and their sdist cannot build on 3.13.
# Install with: uv pip install "spinachlang[pyquil]"   (Python <=3.12 only)
pyquil = [
  "pytket-pyquil==0.40.0",
]
# Editor / LSP integration — not needed for library or CLI use
lsp = [
  "pygls==2.0.1",
  "lsprotocol==2025.0.0",
]
dev = ["pylint>=3.2.0", "pytest>=8.3.0"]

[project.scripts]
spinachlang     = "spinachlang.main:main"
spinachlang-lsp = "spinachlang.lsp_main:main"

[project.urls]
Homepage   = "https://github.com/spinachlang/spinachlang"
Repository = "https://github.com/spinachlang/spinachlang"

# Explicit discovery: keeps tests/ and build/ out of the wheel.
[tool.setuptools.packages.find]
where   = ["."]
include = ["spinachlang*"]
exclude = ["tests*", "build*"]

# grammar.lark must be bundled — the parser reads it at runtime.
[tool.setuptools.package-data]
spinachlang = ["grammar.lark"]

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint.format]
# Gate-handler signatures and dispatch-table entries routinely reach 110–120
# characters; the default 100 produces noise without improving readability.
max-line-length = 120
